backend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: gitlab-registry-credentials
      containers:
        - name: backend
          image: registry.gitlab.com/nidadinch/to-do-app-backend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: backend-entrypoint
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
