backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-entrypoint
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
