backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              service:
                name: backend-entrypoint
                port: 80
